# OOP-Project-SonicClassicHeroes

./: .gitignore  CMakeLists.txt  Classes.h  Menu.cpp  Menu.h  README.md  Src.cpp  sfml-app
Data/: BossLevel_Layout.txt  Level1_Layout.txt  Level2_Layout.txt  Level3_Layout.txt  SaveGame.txt  leaderboard.txt
Src/: Src.cpp  sfml-app
classes/entities/: Entity.cpp  Entity.h
classes/entities/dynamicEntity/: DynamicEntity.cpp  DynamicEntity.h
classes/entities/dynamicEntity/enemy/: Enemy.cpp  Enemy.h  Projectile.cpp  Projectile.h  ProjectileManager.cpp  ProjectileManager.h
classes/entities/dynamicEntity/enemy/crawlers/: CrabMeat.cpp  CrabMeat.h  MotoBug.cpp  MotoBug.h
classes/entities/dynamicEntity/enemy/flyers/: BatBrain.cpp  BatBrain.h  BeeBot.cpp  BeeBot.h  Boss.cpp  Boss.h
classes/entities/dynamicEntity/player/: Knuckles.cpp  Knuckles.h  Player.cpp  Player.h  Sonic.cpp  Sonic.h  Tails.cpp  Tails.h
classes/factories/: EnemyFactory.h  PlayerFactory.cpp  PlayerFactory.h
classes/game/: Animation.cpp  Animation.h  BossLevel.cpp  BossLevel.h  Game.cpp  Game.h  Level.cpp  Level.h  Level1_Labyrinth.cpp  Level1_Labyrinth.h  Level2_IceCap.cpp  Level2_IceCap.h  Level3_DeathEgg.cpp  Level3_DeathEgg.h  Menu.cpp  Menu.h  SaveState.h  Scoreboard.cpp  Scoreboard.h  SoundManager.cpp  SoundManager.h
